<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_home"
        android:checked="true"
        android:icon="@drawable/home_normal"
        android:title="@string/home"/>
    <item
        android:id="@+id/menu_knowledge"
        android:icon="@drawable/knowledge_normal"
        android:title="@string/book_system"/>
    <item
        android:id="@+id/menu_navi"
        android:icon="@drawable/navigate"
        android:title="@string/navigate"/>
    <item
        android:id="@+id/menu_chat"
        android:icon="@drawable/chat_normal"
        android:title="@string/wechat"/>
    <item
        android:id="@+id/menu_project"
        android:icon="@drawable/project_normal"
        android:title="@string/project"/>
</menu>
