<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".module.account.activity.RegisterActivity">

    <include layout="@layout/toolbar_layout" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:padding="10dp"
        app:counterEnabled="true"
        app:counterMaxLength="50"
        app:counterOverflowTextAppearance="@style/TextErrorAppearance"
        app:errorTextAppearance="@style/TextErrorAppearance">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tie_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:padding="10dp"
        app:counterEnabled="true"
        app:counterMaxLength="50"
        app:counterOverflowTextAppearance="@style/TextErrorAppearance"
        app:errorTextAppearance="@style/TextErrorAppearance"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/colorAccent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tie_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_repassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:padding="10dp"
        app:counterEnabled="true"
        app:counterMaxLength="50"
        app:counterOverflowTextAppearance="@style/TextErrorAppearance"
        app:errorTextAppearance="@style/TextErrorAppearance"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/colorAccent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tie_repassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/re_password"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="60dp"
        android:background="@drawable/button_style"
        android:gravity="center"
        android:text="@string/register"
        android:textColor="@color/white"
        android:textSize="@dimen/text_content" />
</LinearLayout>